last modifier & delete

--- a/www/admin/css/design.css
+++ b/www/admin/css/design.css
@@ -140,3 +140,48 @@ th {
     padding:5px 5px 5px 0;
 
 }
+
+.msg {
+    margin: 30px auto;
+    padding: 10px;
+    border-radius: 5px;
+    color: #0aa22e;
+    background: #dff0d8;
+    border: 1px solid #3c763d;
+    width: 50%;
+    text-align: center;
+}
+
+.error_msg {
+    margin: 30px auto;
+    padding: 10px;
+    border-radius: 5px;
+    color: red;
+    background: #dff0d8;
+    border: 1px solid indianred;
+    width: 50%;
+    text-align: center;
+}
+
+
+.edit_btn {
+    text-decoration: none;
+    padding: 2px 5px;
+    background: #2E8B57;
+    color: white;
+    border-radius: 3px;
+}
+
+.del_btn {
+    text-decoration: none;
+    padding: 2px 5px;
+    color: white;
+    border-radius: 3px;
+    background: red;
+}
+
+.btn-success {
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+}
