--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,16 +8,13 @@
     font-family: "Edition";
 }
 
-
-
-
 * {
     box-sizing: border-box;
 }
 
 /* Add a gray background color with some padding */
 body {
-    font-family: Arial;
+    font-family: gfsdidot,georgia,serif;
     padding: 20px;
     height: 100%;
 }
@@ -66,15 +63,66 @@ body {
     margin-top: 20px;
 }
 
+.redirect_btn {
+    text-decoration: none;
+    padding: 2px 5px;
+    background: #dddddd;
+    color: black;
+    border-radius: 3px;
+    letter-spacing: 2px;
+}
 
+li {
+    list-style: none;
+    margin: 10px;
+    color: #a6a6a6;
+    text-transform: uppercase;
+}
 
+li p {
+    display: inline;
+    width: 50px;
+    color: black;
+    margin-left: 10px;
+}
 
+dt, dd{
+    display: inline;
+    margin: 0;
+}
 
+dl.table-display {
+    width: 41.1em;
+    margin: 2em 0;
+    padding: 0;
+    font-family: georgia, times, serif;
+    letter-spacing: 2px;
+}
 
+.table-display dt {
+    clear:right;
+    float: right;
+    width: 16em;
+    padding-right: 12px;
+    font-weight: bold;
+    padding: 8px 0;
+    text-transform: uppercase;
+}
 
-/*html, body, .container {*/
-    /*height: 100%;*/
-/*}*/
+.table-display dd {
+    color: #a6a6a6;
+    clear:left;
+    float:left;
+    width: 24em;
+    padding: 8px 0;
+    padding-left: 12px;
+    text-transform: uppercase;
+}
+
+.test {
+    float: left;
+    width: 50%;
+}
 
 hr {
     margin-top: 20px;
@@ -84,31 +132,35 @@ hr {
 }
 
 .model-tittle {
-    font-family: "Edition", sans-serif;
+    font-family: gfsdidot,georgia,serif;
     text-align: center;
     font-size: 2em;
     letter-spacing: 10px;
 }
 
+.featured-image {
+    alignment: center;
+    position: relative;
+}
+
+.fa-instagram {
+    font-size: 30px !important;
+}
+
+.model-tittle a, h3 {
+    font-size: 20px;
+}
+
 .measurement_model {
-    text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     letter-spacing: 5px;
-    font-family: AdelleSAGE, Arial, sans-serif;
+    font-family: gfsdidot,georgia,serif;
 }
-
-h1, h2, h3, h4 {
-    font-family: "Edition", sans-serif;
-}
-
-p, li, ul {
-    font-family: "Edition", sans-serif;
-}
-
 .navbar-main li a {
+    font-family: gfsdidot,georgia,serif;
     color: black;
     text-decoration-style: none;
-    font-size: 2em;
+    font-size: 15px;
 }
 
 .intro_model {
@@ -138,12 +190,7 @@ p, li, ul {
 }
 
 .model_nom {
-    padding-top: 10px;
-    text-align: center;
-    font-size: 20px;
-}
-
-.model_nom {
+    font-family: "Edition", sans-serif;
     color: black;
     text-align: right;
     font-size: 2em;
@@ -155,7 +202,6 @@ p, li, ul {
 }
 
 .home_gallerie a {
-
     text-decoration: none !important;
 }
 
@@ -172,12 +218,24 @@ p, li, ul {
     margin-bottom: 5em;
 }
 
+.center-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    margin-bottom: 1em !important;
+    max-width: 450px !important;
+    height: auto !important;
+}
+
 .img-center {
-    float: left;
+    float:left;
 }
 
 .img-holder {
     padding: 0px;
+    width: 50%;
+    height: auto !important;
 }
 
 .gallerie {
@@ -200,7 +258,6 @@ p, li, ul {
 
 .model {
     margin-bottom: 20px;
-    /*height:calc(100% - 150px);*/
 }
 
 .model p {
@@ -264,7 +321,15 @@ p, li, ul {
 }
 
 
+.pagination > .active > a {
+    background-color: #a6a6a6 !important;
+    border-color: #a6a6a6 !important;
+    color: white !important;
+}
 
+.pagination > li > a {
+    color: black!important;
+}
 
 
 
