--- a/www/css/style.css
+++ b/www/css/style.css
@@ -360,3 +360,30 @@ hr {
     margin-top: 10px;
     display: flex;
 }
+
+.text-center {
+    text-align: center;
+}
+
+.sub-tittle {
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+
+.mensuration-name {
+    color: #a6a6a6;
+    text-transform: uppercase;
+    font-size: 15px;
+    margin-right: 10px;
+}
+
+span .mensuration-label {
+    color: #040404;
+    text-transform: uppercase;
+}
+
+.model > div {
+    margin-bottom: 20px;
+}
