--- a/www/css/style.css
+++ b/www/css/style.css
@@ -387,3 +387,67 @@ span .mensuration-label {
 .model > div {
     margin-bottom: 20px;
 }
+
+
+
+
+/* Slider */
+.button {
+    border: 1px outset #333;
+    padding: 1em;
+    display: inline-block;
+
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+.button:active {
+    border-style: inset;
+}
+.disabled {
+    color: #a6a6a6;
+    border-color: #a6a6a6;
+}
+.disabled:active {
+    border-style: outset;
+}
+
+.slide-controls img {
+border-radius: 0;
+}
+
+.slide {
+    width: 300px;
+    height: 200px;
+}
+.slide-controls {
+    width: 100%;
+    position: relative;
+    bottom: 8px;
+}
+
+#slide {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+#slide2 {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+#next-slide {
+    position: absolute;
+    bottom: 8px;
+    right: 0;
+    border-radius: 15px;
+    border-color: #a6a6a6;
+}
+
+#prev-slide {
+    position: absolute;
+    bottom: 8px;
+    left: 0;
+    border-radius: 15px;
+    border-color: #a6a6a6;
+}
