--- a/www/css/style.css
+++ b/www/css/style.css
@@ -116,6 +116,13 @@ dl.table-display {
     text-transform: uppercase;
 }
 
+
+.encore {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 hr {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -200,6 +207,15 @@ hr {
     margin-bottom: 5em;
 }
 
+.center-slide {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 500px;
+    height: auto;
+    margin-bottom: 5em;
+}
+
 .center-img {
     display: block;
     margin-left: auto;
@@ -241,6 +257,26 @@ hr {
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
+}
+
+.change-picture {
+    transition: .5s ease;
+    opacity: 1;
+    position: absolute;
+    bottom: -5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    cursor: pointer;
+}
+
+.direction {
+    background-color: rgba(75, 76, 78, 0.81);
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+    border-radius: 15px;
+    opacity: 1;
 }
 
 .container:hover .image-model {
@@ -451,3 +487,509 @@ border-radius: 0;
     border-radius: 15px;
     border-color: #a6a6a6;
 }
+
+
+/* modal */
+
+.modal {
+    z-index:1;
+    display:none;
+    padding-top:10px;
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    overflow:auto;
+    background-color:rgb(0,0,0);
+    background-color:rgba(0,0,0,0.8)
+}
+
+.modal-content{
+    margin: auto;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+.modal-hover-opacity {
+    opacity:1;
+    filter:alpha(opacity=100);
+    -webkit-backface-visibility:hidden
+}
+
+.modal-hover-opacity:hover {
+    opacity:0.60;
+    filter:alpha(opacity=60);
+    -webkit-backface-visibility:hidden
+}
+
+.img-modal-style {
+    width: 75%;
+    max-width:100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #f3f3f3;
+}
+
+
+.close {
+    text-decoration:none;float:right;font-size:24px;font-weight:bold;color:white
+}
+.container1 {
+    width:200px;
+    display:inline-block;
+}
+.modal-content, #caption {
+
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)}
+    to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
+
+
+.img-holder {
+    width: 40%;
+    height: auto;
+}
+
+/* Instagram */
+
+.posts{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+
+
+
+
+
+/*          bug css      */
+
+
+div.scrollmenu {
+    background-color: #f3f3f3;
+    overflow: auto;
+    white-space: nowrap;
+}
+
+
+
+.leftcolumn {
+    float: left;
+    width: 75%;
+}
+
+/* Right column */
+.rightcolumn {
+    float: left;
+    width: 25%;
+    padding-left: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+    background-color: white;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Footer */
+.footer {
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
+    margin-top: 20px;
+}
+
+.redirect_btn {
+    text-decoration: none;
+    padding: 2px 5px;
+    background: #dddddd;
+    color: black;
+    border-radius: 3px;
+    letter-spacing: 2px;
+}
+
+li {
+    list-style: none;
+    margin: 10px;
+    color: #a6a6a6;
+    text-transform: uppercase;
+}
+
+li p {
+    display: inline;
+    width: 50px;
+    color: black;
+    margin-left: 10px;
+}
+
+dt, dd{
+    display: inline;
+    margin: 0;
+}
+
+dl.table-display {
+    width: 41.1em;
+    margin: 2em 0;
+    padding: 0;
+    font-family: georgia, times, serif;
+    letter-spacing: 2px;
+}
+
+.table-display dt {
+    clear:right;
+    float: right;
+    width: 16em;
+    padding-right: 12px;
+    font-weight: bold;
+    padding: 8px 0;
+    text-transform: uppercase;
+}
+
+.table-display dd {
+    color: #a6a6a6;
+    clear:left;
+    float:left;
+    width: 24em;
+    padding: 8px 0;
+    padding-left: 12px;
+    text-transform: uppercase;
+}
+
+.test {
+    float: left;
+    width: 50%;
+}
+
+hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #020202 !important;
+}
+
+.model-tittle {
+    font-family: gfsdidot,georgia,serif;
+    text-align: center;
+    font-size: 2em;
+    letter-spacing: 10px;
+}
+
+.featured-image {
+    alignment: center;
+    position: relative;
+}
+
+.fa-instagram {
+    font-size: 30px !important;
+}
+
+.model-tittle a, h3 {
+    font-size: 20px;
+}
+
+.measurement_model {
+    font-size: 20px;
+    letter-spacing: 5px;
+    font-family: gfsdidot,georgia,serif;
+}
+.navbar-main li a {
+    font-family: gfsdidot,georgia,serif;
+    color: black;
+    text-decoration-style: none;
+    font-size: 15px;
+}
+
+.intro_model {
+    font-size: 2em;
+    letter-spacing: 10px;
+}
+
+.navbar {
+    margin: 0 40px 0 40px;
+}
+
+.navbar-main ul li a:hover {
+    background: none;
+}
+
+.navbar-main a:hover {
+    background: none;
+}
+
+.navbar-brand img {
+    image-rendering: -webkit-optimize-contrast;
+}
+
+.nav-menu {
+    margin-top: 20px;
+    float: right;
+}
+
+.model_nom {
+    font-family: "Edition", sans-serif;
+    color: black;
+    text-align: right;
+    font-size: 2em;
+    text-decoration: none !important;
+}
+
+.home_gallerie {
+    margin-top: 20px;
+}
+
+.home_gallerie a {
+    text-decoration: none !important;
+}
+
+.home_gallerie .col-md-4 {
+    padding: 0 70px 0 70px;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    height: auto;
+    margin-bottom: 5em;
+}
+
+.center-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    margin-bottom: 1em !important;
+    max-width: 450px !important;
+    height: auto !important;
+}
+
+.img-center {
+    float:left;
+}
+
+.img-holder {
+    padding: 0px;
+    width: 50%;
+    height: auto !important;
+}
+
+.gallerie {
+    margin-top: 20px;
+}
+
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.three_max:nth-child(3n+1) {
+    clear: left;
+}
+
+.model {
+    margin-bottom: 20px;
+}
+
+.model p {
+    margin-top: 20%;
+}
+
+.margin-top-small {
+    margin-top: 100px;
+}
+
+.image-model {
+    opacity: 1;
+    display: block;
+    width: 25%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.container:hover .image-model {
+    opacity: 0.3;
+}
+
+.container:hover .middle {
+    opacity: 1;
+}
+
+.container-img img {
+    margin-left: auto;
+    margin-right: auto;
+    width: 6em
+}
+
+.text {
+    background-color: rgba(75, 76, 78, 0.81);
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+}
+
+.middle a {
+    text-decoration: none;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 6px;
+    margin: 10px;
+}
+
+
+.pagination > .active > a {
+    background-color: #a6a6a6 !important;
+    border-color: #a6a6a6 !important;
+    color: white !important;
+}
+
+.pagination > li > a {
+    color: black!important;
+}
+
+
+
+/* PORTFOLIO*/
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+    cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+/* Container for image text */
+.caption-container {
+    text-align: center;
+    background-color: #222;
+    padding: 2px 16px;
+    color: white;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Six columns side by side */
+.column {
+    float: left;
+    width: 16.66%;
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+    opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+    opacity: 1;
+}
+
+@media (max-width: 768px) { .navbar-brand {margin-left:20px;} .navbar-toggle {margin-right:25px;} #Grid .mix{margin-left:-25px;}}
+
+.thumbnail {
+    padding: 4px;
+    line-height: 1.428571429;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    display: inline-block;
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+.thumbnail > img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+
+
